--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ultimate_ai_assignment",
+  "name": "chatbot",
   "version": "1.0.0",
-  "description": "Class for state management of a troubleshooting chat bot",
-  "main": "src/sum.js",
+  "description": "A single class implementing state management for a troubleshooting chat bot.",
+  "main": "src/chatbot.js",
   "directories": {
     "test": "test"
   },
@@ -16,9 +16,8 @@
     "node": "^13.12.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "faker": "^4.1.0",
     "mocha": "^7.1.1",
-    "sinon": "^9.0.2"
+    "chai": "^4.2.0",
+    "faker": "^4.1.0"
   }
 }
